# z2prod

./: .dockerignore  Cargo.toml  Dockerfile  Dockfile.old  curl-command.txt  log.json  sqlx-data.json
.cargo/: config.toml
.github/workflows/: general.yml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20240814135556_add_status_to_subscritpions.sql  20240815125703_make_status_not_null_in_subscriptions.sql  20240815130216_create_subscription_tokens_table.sql  20240914130920_create_users_table.sql  20240914131228_rename_password_column.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/login/: get.rs  login.html  mod.rs  post.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
